tests/snapshots/run_wpt_conformance__litert_lesserOrEqual_float16_two_5D_inputs_with_identical_shapes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float16 two 5D inputs with identical shapes",
    "litert",
    "PASS",
)
